// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > Tabs theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <div
    class="rh-tabs"
    data-orientation="horizontal"
  >
    <div
      aria-label="Inspector"
      aria-orientation="horizontal"
      class="rh-tabs__list"
      role="tablist"
    >
      <button
        aria-controls="rh-tabs-ID-panel-sources"
        aria-selected="true"
        class="rh-tabs__tab"
        data-rh-roving-item=""
        data-state="selected"
        data-value="sources"
        id="rh-tabs-ID-tab-sources"
        role="tab"
        tabindex="0"
        type="button"
      >
        Sources
      </button>
      <button
        aria-controls="rh-tabs-ID-panel-claims"
        aria-disabled="true"
        aria-selected="false"
        class="rh-tabs__tab"
        data-rh-roving-item=""
        data-state="idle"
        data-value="claims"
        disabled=""
        id="rh-tabs-ID-tab-claims"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Claims
      </button>
      <button
        aria-controls="rh-tabs-ID-panel-context"
        aria-selected="false"
        class="rh-tabs__tab"
        data-rh-roving-item=""
        data-state="idle"
        data-value="context"
        id="rh-tabs-ID-tab-context"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Context
      </button>
    </div>
    <div
      aria-labelledby="rh-tabs-ID-tab-sources"
      class="rh-tabs__panel"
      data-state="selected"
      id="rh-tabs-ID-panel-sources"
      role="tabpanel"
      tabindex="0"
    >
      Source list
    </div>
  </div>
</div>
`;

exports[`Tabs > Tabs theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <div
    class="rh-tabs"
    data-orientation="horizontal"
  >
    <div
      aria-label="Inspector"
      aria-orientation="horizontal"
      class="rh-tabs__list"
      role="tablist"
    >
      <button
        aria-controls="rh-tabs-ID-panel-sources"
        aria-selected="true"
        class="rh-tabs__tab"
        data-rh-roving-item=""
        data-state="selected"
        data-value="sources"
        id="rh-tabs-ID-tab-sources"
        role="tab"
        tabindex="0"
        type="button"
      >
        Sources
      </button>
      <button
        aria-controls="rh-tabs-ID-panel-claims"
        aria-disabled="true"
        aria-selected="false"
        class="rh-tabs__tab"
        data-rh-roving-item=""
        data-state="idle"
        data-value="claims"
        disabled=""
        id="rh-tabs-ID-tab-claims"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Claims
      </button>
      <button
        aria-controls="rh-tabs-ID-panel-context"
        aria-selected="false"
        class="rh-tabs__tab"
        data-rh-roving-item=""
        data-state="idle"
        data-value="context"
        id="rh-tabs-ID-tab-context"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Context
      </button>
    </div>
    <div
      aria-labelledby="rh-tabs-ID-tab-sources"
      class="rh-tabs__panel"
      data-state="selected"
      id="rh-tabs-ID-panel-sources"
      role="tabpanel"
      tabindex="0"
    >
      Source list
    </div>
  </div>
</div>
`;

exports[`Tabs > Tabs theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <div
    class="rh-tabs"
    data-orientation="horizontal"
  >
    <div
      aria-label="Inspector"
      aria-orientation="horizontal"
      class="rh-tabs__list"
      role="tablist"
    >
      <button
        aria-controls="rh-tabs-ID-panel-sources"
        aria-selected="true"
        class="rh-tabs__tab"
        data-rh-roving-item=""
        data-state="selected"
        data-value="sources"
        id="rh-tabs-ID-tab-sources"
        role="tab"
        tabindex="0"
        type="button"
      >
        Sources
      </button>
      <button
        aria-controls="rh-tabs-ID-panel-claims"
        aria-disabled="true"
        aria-selected="false"
        class="rh-tabs__tab"
        data-rh-roving-item=""
        data-state="idle"
        data-value="claims"
        disabled=""
        id="rh-tabs-ID-tab-claims"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Claims
      </button>
      <button
        aria-controls="rh-tabs-ID-panel-context"
        aria-selected="false"
        class="rh-tabs__tab"
        data-rh-roving-item=""
        data-state="idle"
        data-value="context"
        id="rh-tabs-ID-tab-context"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Context
      </button>
    </div>
    <div
      aria-labelledby="rh-tabs-ID-tab-sources"
      class="rh-tabs__panel"
      data-state="selected"
      id="rh-tabs-ID-panel-sources"
      role="tabpanel"
      tabindex="0"
    >
      Source list
    </div>
  </div>
</div>
`;

exports[`Tabs > Tabs theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <div
    class="rh-tabs"
    data-orientation="horizontal"
  >
    <div
      aria-label="Inspector"
      aria-orientation="horizontal"
      class="rh-tabs__list"
      role="tablist"
    >
      <button
        aria-controls="rh-tabs-ID-panel-sources"
        aria-selected="true"
        class="rh-tabs__tab"
        data-rh-roving-item=""
        data-state="selected"
        data-value="sources"
        id="rh-tabs-ID-tab-sources"
        role="tab"
        tabindex="0"
        type="button"
      >
        Sources
      </button>
      <button
        aria-controls="rh-tabs-ID-panel-claims"
        aria-disabled="true"
        aria-selected="false"
        class="rh-tabs__tab"
        data-rh-roving-item=""
        data-state="idle"
        data-value="claims"
        disabled=""
        id="rh-tabs-ID-tab-claims"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Claims
      </button>
      <button
        aria-controls="rh-tabs-ID-panel-context"
        aria-selected="false"
        class="rh-tabs__tab"
        data-rh-roving-item=""
        data-state="idle"
        data-value="context"
        id="rh-tabs-ID-tab-context"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Context
      </button>
    </div>
    <div
      aria-labelledby="rh-tabs-ID-tab-sources"
      class="rh-tabs__panel"
      data-state="selected"
      id="rh-tabs-ID-panel-sources"
      role="tabpanel"
      tabindex="0"
    >
      Source list
    </div>
  </div>
</div>
`;
